# tflib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  config.cpp  logger.h  strings.cpp  strings.h
include/: config.h  logger.h  static_vector.h  strings.h
include/tflib/: arg_parser.h  binary_file_writer.h  config.h  dotenv.h  logger.h  static_vector.h  strings.h
tests/: main.cpp
tflib/: arg_parser.cpp  binary_file_writer.cpp  config.cpp  dotenv.cpp  logger.cpp  static_vector.cpp  strings.cpp
